<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/close_pop_up"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/svg_description"
            android:foreground="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/label_shape"
            app:tintMode="src_over"
            tools:ignore="ImageContrastCheck"
            tools:targetApi="m" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:background="@drawable/label_shape_no_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.914">

            <TextView
                android:id="@+id/categories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories_text"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/radio_button_group_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/label_shape_no_rounded"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">


            <RadioButton
                android:id="@+id/amor_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorie_amor"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/trabajo_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorie_trabajo"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/chistes_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorie_chistes" />

            <RadioButton
                android:id="@+id/desahogo_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorie_desahogo" />

        </LinearLayout>

        <Button
            android:id="@+id/send_selected_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/send_button"
            app:backgroundTint="#00FFFFFF"
            app:backgroundTintMode="screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_button_group_categories"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>