<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkest_sienna">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_label"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reportar_pensamiento_descripcion_text_edit"
                    android:layout_width="306dp"
                    android:layout_height="150dp"
                    android:background="@drawable/label_pensamiento_shape"
                    android:hint="@string/reportar_pensamiento_descripcion"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_label"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="117dp"
                android:layout_marginLeft="117dp"
                android:layout_marginEnd="117dp"
                android:layout_marginRight="117dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reportar_pensamiento_titulo_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/label_shape"
                    android:hint="@string/reportar_pensamiento_titulo"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/title_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/label_display_pensamientos_shape"
                android:gravity="center"
                android:text="@string/fragment_title_label"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/label_display_pensamientos_shape"
                android:gravity="center"
                android:text="@string/fragment_description_label"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_input_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>