<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkest_sienna"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_lista_pensamiento"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-16dp">

        <EditText
            android:id="@+id/app_title_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginEnd="98dp"
            android:layout_marginRight="98dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/app_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/label_pensamientos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/label_pensamientos"
            android:layout_width="221dp"
            android:layout_height="38dp"
            android:layout_marginStart="131dp"
            android:layout_marginLeft="131dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="131dp"
            android:layout_marginRight="131dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/label_shape"
            app:layout_constraintBottom_toTopOf="@+id/liner_layout_home_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/fragmento_pensamiento_text_view"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/liner_layout_home_activity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/label_shape"
            android:baselineAligned="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/home_activity_button_reportar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.595">

        </LinearLayout>

        <Button
            android:id="@+id/home_activity_button_reportar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_shape"
            android:text="@string/home_activity_button_reportar"
            app:backgroundTint="#FEFBDE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liner_layout_home_activity"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/undo_action_button"
            android:layout_width="84dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/undo_action_button_description"
            app:layout_constraintEnd_toStartOf="@+id/home_activity_button_reportar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liner_layout_home_activity"
            app:srcCompat="@drawable/ic_left_arrow"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/redo_action_button"
            android:layout_width="84dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/redo_action_button_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_activity_button_reportar"
            app:layout_constraintTop_toBottomOf="@+id/liner_layout_home_activity"
            app:srcCompat="@drawable/ic_right_arrow"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>