<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_pensamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/label_pensamiento_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/label_pensamiento_shape">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fragmento_pensamiento_text_view"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragmento_pensamiento_text_view"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.846"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.078"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/fragmento_button_editar"
                    android:layout_width="94dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/fragmento_button_editar"
                    android:textSize="12sp"
                    app:backgroundTint="@color/old_rose"
                    app:backgroundTintMode="screen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/fragmento_button_eliminar"
                    app:layout_constraintHorizontal_bias="0.629"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmento_pensamiento_text_view"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/fragmento_button_eliminar"
                    android:layout_width="102dp"
                    android:layout_height="37dp"
                    android:layout_marginEnd="84dp"
                    android:layout_marginRight="84dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/fragmento_button_eliminar"
                    android:textSize="12sp"
                    app:backgroundTint="@color/old_rose"
                    app:backgroundTintMode="screen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>